Fixed [Upfront] various z-index issues > https://www.meistertask.com/app/task/8XncegFq/upfront-various-z-index-issues

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	background: rgba(37, 58, 78, 0.8);
 	top:0;
-	z-index: 10;
+	z-index: 10001002;
 	font-family: 'Lato';
 	font-size: 24px;
 	font-weight: 200;
