--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -3440,7 +3440,7 @@ div#page.upfront-layout-view.upfront-layout-view .upfront-editable_entity.upfron
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 10001000; }
+  z-index: 10001002; }
 
 .upfront-inline-modal-wrap {
   margin: auto;
