--- a/styles/sass/partials/_region.scss
+++ b/styles/sass/partials/_region.scss
@@ -1013,7 +1013,7 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 10001000;
+	z-index: 10001002;
 }
 .upfront-inline-modal {
 }
